Closes #77. Closes #79. - Fixed the boolean attribute alignment issues by making some simple changes to the related `.sass` files. - Fixed the SectionProperty/WorldObjectProperties problem. Previously the code was only generating new WorldObjectProperties for new SectionProperties of the `boolean` type, but now the code has been expanded to create new WorldObjectProperties ANYTIME a new SectionProperty is added. All new WorldObjectProperties have a boolean_value default of `false`, to continue to support the original intention, but the rest of the `[type]_value` fields are still being left blank (which is fine).

--- a/app/assets/stylesheets/sass/_main.sass
+++ b/app/assets/stylesheets/sass/_main.sass
@@ -66,13 +66,12 @@
   table
     td
       vertical-align: top
-
+      
 a
   color: $color-gray
   text-decoration: none
   &:hover
     color: $color-blue-gray
-
 hr
   color: $color-gray
   background-color: $color-gray
@@ -90,6 +89,10 @@ input
   border: none
   padding: 5px
   width: 300px
+  &[type=checkbox]
+    width: auto
+  &[type=submit]
+    width: auto
   height: 15px
 textarea
   @extend input
@@ -101,3 +104,18 @@ select
   height: auto
   option
     border: 0px
+    
+/* input fields */
+
+.narrow-input
+  @extend input
+  width: 225px
+.styled-button
+  width: auto
+  height: auto
+.styled-button-dark-red
+  @extend .styled-button
+  background-color: $color-dark-red
+.styled-button-blue-gray
+  @extend .styled-button
+  background-color: $color-blue-gray
