--- a/app/assets/stylesheets/sass/_primitives.sass
+++ b/app/assets/stylesheets/sass/_primitives.sass
@@ -81,18 +81,3 @@ $site-title-font-size: 40px
 
 .border-right
   border-right: 1px solid
-
-/* input fields */
-
-.narrow-input
-  @extend input
-  width: 225px
-.styled-button
-  width: auto
-  height: auto
-.styled-button-dark-red
-  @extend .styled-button
-  background-color: $color-dark-red
-.styled-button-blue-gray
-  @extend .styled-button
-  background-color: $color-blue-gray
